src/objects/NIA_SurveyQuestionResponse__c.object
<CustomObject>
    <fields>
        <fullName>Datatype__c</fullName>
        <label>Data Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>String</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InvitationId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Invitation</label>
        <referenceTo>SurveyInvitation</referenceTo>
        <relationshipLabel>Survey Question Responses</relationshipLabel>
        <relationshipName>Survey_Question_Responses</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QuestionChoiceId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Question Choice</label>
        <referenceTo>SurveyQuestionChoice</referenceTo>
        <relationshipLabel>Survey Question Responses</relationshipLabel>
        <relationshipName>Survey_Question_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QuestionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question</label>
        <referenceTo>SurveyQuestion</referenceTo>
        <relationshipLabel>Survey Question Responses</relationshipLabel>
        <relationshipName>Survey_Question_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ResponseId__c</fullName>
        <label>Survey Response</label>
        <referenceTo>NIA_SurveyResponse__c</referenceTo>
        <relationshipLabel>Survey Question Responses</relationshipLabel>
        <relationshipName>Survey_Question_Responses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ResponseShortText__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SurveyVersionId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Survey Version</label>
        <referenceTo>SurveyVersion</referenceTo>
        <relationshipLabel>Survey Question Responses</relationshipLabel>
        <relationshipName>Survey_Question_Responses</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Survey Question Response</label>
    <nameField>
        <displayFormat>A-{0000000000}</displayFormat>
        <label>Survey Question Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Question Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>